minor column sizing

--- a/src/app/role-management/manage-request/manage-request.page.html
+++ b/src/app/role-management/manage-request/manage-request.page.html
@@ -68,7 +68,7 @@
               (click)="onSubmitClick()"
               [disabled]="!selectedOption"
               [ngClass]="!selectedOption && 'usa-button-disabled'"
-      >Submit</button>
+      >{{submitLabel()}}</button>
     </div>
   </div>
   <div class="usa-width-one-fourth">&nbsp;</div>
