--- a/src/app/role-management/rolemgmt-content/rolemgmt-content.template.html
+++ b/src/app/role-management/rolemgmt-content/rolemgmt-content.template.html
@@ -3,11 +3,11 @@
     <!--<img src="src/assets/img/blank_icon.png" class = "img_size" alt="GSA Image" tabindex="0">-->
     <div class="overview-header">
       <div class="usa-grid-full">
-        <div class="usa-width-one-third">
+        <div class="usa-width-five-twelfths">
           <h3>Select an Organization</h3>
           <agencyPicker [multimode]="false"></agencyPicker>
         </div>
-        <div class="usa-width-one-third">
+        <div class="usa-width-one-fourth">
           <h3>Requests</h3>
           <div>
             <span class="badge-primary">3</span>
