[SAM-6965] Implement saving and loading funded projects

--- a/src/app/assistance-listing/assistance-listing-operations/sections/overview/overview.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/overview/overview.template.html
@@ -9,6 +9,7 @@
                formControlName="objective"></samTextArea>
 
   <falFYTable [options]="fundedProjectsConfig"
+              [formControlName]="'fundedProjects'"
   ></falFYTable>
 
   <samTextArea [hint]="'Provide an introduction to the listing that tells the public in plain, clear language its purpose, who it serves, and what makes it unique.'"
