[SAM-9695] Implement save/load for accomplishments

--- a/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
@@ -8,9 +8,9 @@
                [formControlName]="'assistanceRange'"
   ></samTextArea>
 
-  <samCheckboxToggledTextarea [options]="accomplishmentsConfig"
-                              [formControlName]="'accomplishments'"
-  ></samCheckboxToggledTextarea>
+  <falFYTable [options]="accomplishmentsConfig"
+              [formControlName]="'accomplishments'"
+  ></falFYTable>
 
   <falAccountIdentificationInput [options]="accountIdentificationConfig"
                                  [formControlName]="'accountIdentification'"
