[SAM-6965] Implement hint for fy table texture

--- a/src/app/assistance-listing/components/fiscal-year-table/fiscal-year-table.template.html
+++ b/src/app/assistance-listing/components/fiscal-year-table/fiscal-year-table.template.html
@@ -59,7 +59,7 @@
       ></samSelect>
 
       <samTextArea *ngIf="showForm"
-                   [hint]="'Please describe funded projects:'"
+                   [hint]="options?.textarea?.hint"
                    [name]="name + '-textarea'"
                    [required]="false"
                    [formControlName]="'textarea'"
