--- a/src/app/role-management/rolemgmt-content/rolemgmt-content.template.html
+++ b/src/app/role-management/rolemgmt-content/rolemgmt-content.template.html
@@ -1,6 +1,5 @@
 <div class = "rolemgmt-content usa-grid-full ">
   <div>
-    <!--<img src="src/assets/img/blank_icon.png" class = "img_size" alt="GSA Image" tabindex="0">-->
     <div class="overview-header">
       <div class="usa-grid-full">
         <div class="usa-width-five-twelfths">
@@ -77,7 +76,7 @@
           <div class="request-top-block">
             <div class="usa-grid-full clearfix">
               <div class="pull-right">
-                <button routerLink = "../requests/{{content.id}}" class="respond-button usa-button usa-button-primary m_T-0">Respond</button>
+                <button *ngIf = "shouldShowRespondButton(content)" routerLink = "../requests/{{content.id}}" class="respond-button usa-button usa-button-primary m_T-0">Respond</button>
               </div>
               <div class="usa-width-one-third">
                 <div><strong>Requested By</strong></div>
