--- a/src/app/assistance-listing/assistance-listing-operations/sections/applying-for-assistance/applying-for-assistance.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/applying-for-assistance/applying-for-assistance.template.html
@@ -10,6 +10,9 @@
     ></samRadioButton>
 
     <div [class.hide]="falAssistanceForm.value.deadlines.flag != 'yes'">
+
+      <assistSubform [hideAddButton]="hideAddButton" (assistActionHandler)="assistActionHandler($event)"  #assistSubForm></assistSubform>
+
       <samTextArea [label]="'Other Deadline Information'"
                    [name]="'deadlines-description'"
                    formControlName="description"
