--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -287,7 +287,16 @@
     <!--How do I apply?-->
     <section id="program-application-information">
       <a name="#/programs/{{programID}}/view#applying-for-assistance"></a>
-      <h2 id="applying-for-assistance">Applying for Assistance</h2>
+      <div class="view-section-margin"></div>
+      <div class="usa-grid-full">
+        <div class="usa-width-two-thirds">
+          <h2 id="applying-for-assistance">Applying for Assistance</h2>
+        </div>
+        <div class="usa-width-one-third">
+          <a *ngIf="program.status?.code!='published'" [routerLink]="['/programs',program.id, 'edit', 'applying-for-assistance']">Edit</a>
+          <i class="fa fa-pencil fal-edit" aria-hidden="true" *ngIf="program.status?.code!='published'" [routerLink]="['/programs',program.id, 'edit', 'applying-for-assistance']"></i>
+        </div>
+      </div>
 
       <h3>Deadlines:</h3>
 
