--- a/src/app/organization-detail/AAC-request/AAC-request.template.html
+++ b/src/app/organization-detail/AAC-request/AAC-request.template.html
@@ -32,14 +32,16 @@
           </samRadioButton>
         </labelWrapper>
 
-        <agencyPicker *ngIf="aacOfficeRadioModel === 'Federal Office'" (organization)="getFederalOrgName($event)" [label]="'Organization Name'" [multimode]="false"></agencyPicker>
-        <samText *ngIf="aacOfficeRadioModel === 'State/Local Office'" [name]="'org-name-input'" [label]="'Organization Name'" [value]="aacStateOrgName"></samText>
+        <agencyPicker *ngIf="aacOfficeRadioModel === 'Federal Office'" (organization)="getFederalOrgName($event)" [label]="'Organization Name'" [multimode]="false" [required]="true" [searchMessage]="aacFederalOrgNameErrorMsg"></agencyPicker>
+        <form class="usa-width-two-thirds aac-contractor-section" *ngIf="aacOfficeRadioModel === 'State/Local Office'" [formGroup]="stateOfficeForm">
+          <samText #stateOfficeName  [control]="contractorForm.get('stateOfficeName')" formControlName="stateOfficeName" [name]="'org-name-input'" [label]="'Organization Name'" [required]="true"></samText>
+        </form>
         <form class="usa-width-two-thirds aac-contractor-section" *ngIf="aacOfficeRadioModel === 'Contractor Office'" [formGroup]="contractorForm">
-          <samText [required]='true' [control]="contractorForm.get('contractName')" formControlName="contractName" [name]="'contract-name-input'" [label]="'Contractor Name'"></samText>
-          <samText [required]='true' [control]="contractorForm.get('contractNum')" formControlName="contractNum" [name]="'contract-number-input'" [label]="'Contract Name'"></samText>
-          <samText [required]='true' [control]="contractorForm.get('OAGECode')" formControlName="OAGECode" [name]="'oage-input'" [label]="'OAGE Code (For CAGE code reference: https://cage.dla.mil/)'"></samText>
-          <samText [required]='true' [control]="contractorForm.get('contractAdmin')" formControlName="contractAdmin" [name]="'admin-name-input'" [label]="'Contract Administration Name'"></samText>
-          <labelWrapper #contractorExpireDateWrapper [required]='true' class="usa-width-one-half" [label]="'Contract Expire Date'" [name]="'expire-date'">
+          <samText #contractName [required]='true' [control]="contractorForm.get('contractName')" formControlName="contractName" [name]="'contract-name-input'" [label]="'Contractor Name'"></samText>
+          <samText #contractNum [required]='true' [control]="contractorForm.get('contractNum')" formControlName="contractNum" [name]="'contract-number-input'" [label]="'Contract Name'"></samText>
+          <samText #contractCAGECode [required]='true' [control]="contractorForm.get('cageCode')" formControlName="cageCode" [name]="'cage-input'" [label]="'CAGE Code (For CAGE code reference: https://cage.dla.mil/)'"></samText>
+          <samText #contractAdmin [required]='true' [control]="contractorForm.get('contractAdmin')" formControlName="contractAdmin" [name]="'admin-name-input'" [label]="'Contract Administration Name'"></samText>
+          <labelWrapper #contractorExpireDateWrapper [required]='true' class="usa-width-two-thirds" [label]="'Contract Expire Date'" [name]="'expire-date'">
             <samDate (valueChange)="setContractExpireDate($event)" [label]="'Expire Date'" name='expire-date'></samDate>
           </labelWrapper>
         </form>
@@ -49,20 +51,30 @@
     <div class="usa-width-one-whole aac-request-div-underline" *ngIf="isSingleAACRequest()">
       <h3 class="p_T-2x">Reason for AAC Request</h3>
       <div class="usa-width-one-whole aac-information-section p_B-4x">
-        <labelWrapper [label]="aacReasonCbxConfig.label" [name]="aacReasonCbxConfig.name">
+        <labelWrapper [label]="aacReasonCbxConfig.label" [name]="aacReasonCbxConfig.name" [required]="true">
           <samCheckbox [(model)]="aacReasonCbxModel" [name]="aacReasonCbxConfig.name" [options]="aacReasonCbxConfig.options" [label]="''" [errorMessage]="aacReasonCbxConfig.errorMessage" [hasSelectAll]="false">
           </samCheckbox>
         </labelWrapper>
         <form class="usa-width-two-thirds aac-fpds-report-code-section p_T-4x p_B-4x" *ngIf="isReasonContainsFPDSReport()" [formGroup]="fpdsReportForm">
-          <samText [required]='true' [control]="fpdsReportForm.get('agencyCode')" formControlName="agencyCode" [name]="'agency-code-input'" [label]="'Sub-tier Agency Code'"></samText>
-          <samText [required]='true' [control]="fpdsReportForm.get('cgacCode')" formControlName="cgacCode" [name]="'cgac-input'" [label]="'CGAC Code'"></samText>
+          <samText #agencyCode [required]='true' [control]="fpdsReportForm.get('agencyCode')" formControlName="agencyCode" [name]="'agency-code-input'" [label]="'Sub-tier Agency Code'"></samText>
+          <samText #cgacCode [required]='true' [control]="fpdsReportForm.get('cgacCode')" formControlName="cgacCode" [name]="'cgac-input'" [label]="'CGAC Code'"></samText>
         </form>
       </div>
     </div>
     <div class="usa-width-one-whole aac-request-div-underline p_B-6x" *ngIf="isSingleAACRequest()">
       <h3 class="p_T-2x">Office Address Information</h3>
-      <div class="usa-width-one-whole aac-address-section" *ngFor="let orgAddr of orgAddresses">
-        <samAddrForm [orgAddrModel]="orgAddr.addrModel" [showAddIcon]="orgAddr.showAddIcon" (onAdditionalAddrRequest)="onAddAddressForm()" (onCancelAdditionalAddrRequest)="onDeleteAddressForm($event)"></samAddrForm>
+      <div class="usa-width-one-whole aac-address-section">
+        <samAddrForm  [orgAddrModel]="mailAddr" [showAddIcon]="false" [showCloseIcon]="false"></samAddrForm>
+      </div>
+      <div class="usa-width-one-whole aac-address-section relative m_T-2x" *ngIf="isBillingAddrRequired()">
+        <samCheckbox class="aac-address-duplicate-fill-cbx" (modelChange)="onDuplicateFillChecked('Billing Address', $event)" [(model)]="billingAddrFillCbxModel" [name]="duplicateAddrCbxConfig.name" [options]="duplicateAddrCbxConfig.options" [label]="''" [errorMessage]="''" [hasSelectAll]="false">
+        </samCheckbox>
+        <samAddrForm  [orgAddrModel]="billAddr" [showAddIcon]="false" [showCloseIcon]="false"></samAddrForm>
+      </div>
+      <div class="usa-width-one-whole aac-address-section relative m_T-2x" *ngIf="isShippingAddrRequired()">
+        <samCheckbox class="aac-address-duplicate-fill-cbx" (modelChange)="onDuplicateFillChecked('Shipping Address', $event)" [(model)]="shippingAddrFillCbxModel" [name]="duplicateAddrCbxConfig.name" [options]="duplicateAddrCbxConfig.options" [label]="''" [errorMessage]="''" [hasSelectAll]="false">
+        </samCheckbox>
+        <samAddrForm  [orgAddrModel]="shipAddr" [showAddIcon]="false" [showCloseIcon]="false"></samAddrForm>
       </div>
     </div>
     <div class="usa-width-one-whole p_B-6x" *ngIf="isSingleAACRequest() || isMultiAACRequest()">
@@ -81,23 +93,31 @@
     </div>
     <div class="usa-width-one-whole aac-request-div-underline p_B-6x">
       <h3 class="p_T-2x p_B-4x">Requesting Office Information</h3>
-      <div class="usa-width-one-whole m_L-3x m_B-1x" *ngFor="let pair of aacObj.officeInfo">
+      <div class="usa-width-one-whole m_L-3x m_B-1x" *ngFor="let pair of aacOfficeInfo">
         <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>{{pair.desc}}:</h4></span>
         <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x">&nbsp;{{pair.value}}</p>
       </div>
     </div>
     <div class="usa-width-one-whole aac-request-div-underline p_B-6x">
       <h3 class="p_T-2x p_B-4x">Reason for AAC Request</h3>
-      <div class="usa-width-one-whole m_L-3x m_B-1x" *ngFor="let pair of aacObj.reasonInfo">
-        <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>{{pair.desc}}:</h4></span>
-        <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x">&nbsp;{{pair.value}}</p>
+      <div class="usa-width-one-whole m_L-3x m_B-1x">
+        <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>Provide Purpose for AAC Request:</h4></span>
+        <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x"><span *ngFor="let val of aacReasonCbxModel">&nbsp;{{val}}<br></span></p>
+      </div>
+      <div class="usa-width-one-whole m_L-3x m_B-1x" *ngIf="aacReasonCbxModel.indexOf('Used for Reporting with FPDS') !== -1">
+        <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>Sub-tier Agency Code:</h4></span>
+        <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x">&nbsp;{{fpdsReportForm.get("agencyCode").value}}</p>
+      </div>
+      <div class="usa-width-one-whole m_L-3x m_B-1x" *ngIf="aacReasonCbxModel.indexOf('Used for Reporting with FPDS') !== -1">
+        <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>CGAC Code:</h4></span>
+        <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x">&nbsp;{{fpdsReportForm.get("cgacCode").value}}</p>
       </div>
     </div>
     <div class="usa-width-one-whole aac-request-div-underline p_B-6x">
       <h3 class="p_T-2x p_B-4x">Office Address Information</h3>
       <p class="m_L-3x m_B-1x" *ngFor="let address of orgAddresses">
-        <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>{{address.addrModel.addrType}}:</h4></span>
-        <span class="usa-width-two-thirds p_T-2x p_B-1x">{{address.addrModel.street}}<br>{{address.addrModel.city}}, {{address.addrModel.state}}&nbsp;{{address.addrModel.postalCode}}<br>{{address.addrModel.country}}</span>
+        <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>{{address.addrType}}:</h4></span>
+        <span class="usa-width-two-thirds p_T-2x p_B-1x">{{address.street1}}<br>{{address.street2}}<br>{{address.city}}, {{address.state}}&nbsp;{{address.postalCode}}<br>{{address.country}}</span>
       </p>
     </div>
     <button class="usa-button-primary p_R-4x p_L-4x pull-right">Confirm</button>
