--- a/src/styles/pages/_aac-request.scss
+++ b/src/styles/pages/_aac-request.scss
@@ -17,4 +17,11 @@
     margin-top: 10px;
     font-weight: 400;
   }
+
+  .aac-address-duplicate-fill-cbx{
+    position: absolute;
+    right: 0;
+    margin-top: 0;
+    z-index: 1050;
+  }
 }
