--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -21,6 +21,26 @@
           </samCheckbox>
         </sam-collapsible>
 
+        <sam-collapsible *ngIf="showRegionalOffices==true" [label]="'Keyword'" [startOpened]="true">
+          <labelWrapper>
+        <sam-autocomplete class="search-bar sam-autocomplete-width" autofill-suggestions
+                          [(ngModel)]="ro_keyword"
+                          (ngModelChange)="regionalOfficeSearchEvent($event)"
+                          [index]="'ro'"
+                          [showClearButton]="true"
+                          [allowAny]="true"
+                          [config]="regionalType"
+                          name="regionalsearch" >
+        </sam-autocomplete>
+            <!--<a (click)="regionalOfficeSearchEvent()" class="usa-agency-picker-submit-text">-->
+              <!--<i class="usa-agency-picker-icon fa fa-search-plus" aria-hidden="true"></i>-->
+            <!--</a>-->
+          </labelWrapper>
+          <!--<a (click)="regionalOfficeSearchEvent()" class="usa-agency-picker-submit-text">-->
+            <!--<i class="usa-agency-picker-icon fa fa-search-plus" aria-hidden="true"></i>-->
+          <!--</a>-->
+        </sam-collapsible>
+
         <sam-collapsible [label]="'Federal Organizations'" [startOpened]="true" *ngIf="index !== 'ent' && index !=='wd'">
           <agencyPicker #agencyPicker
             [label]="'Search Federal Organizations'"
