add the pending and escalated counts

--- a/src/app/role-management/rolemgmt-content/rolemgmt-content.template.html
+++ b/src/app/role-management/rolemgmt-content/rolemgmt-content.template.html
@@ -9,11 +9,11 @@
         <div class="usa-width-one-fourth">
           <h3>Requests</h3>
           <div>
-            <span class="badge-primary">3</span>
+            <span class="badge-primary">{{escalatedCount}}</span>
             <a>Escalated Requests</a>
           </div>
           <div class="m_T-2x">
-            <span class="badge-primary">2</span>
+            <span class="badge-primary">{{pendingCount}}</span>
             <a>Pending Requests</a>
           </div>
         </div>
