--- a/src/app/role-management/rolemgmt-workspace.page.html
+++ b/src/app/role-management/rolemgmt-workspace.page.html
@@ -25,6 +25,8 @@
         [currCount] = "currCount"
         [totalPages] = "pages"
         [currPage] = "page"
+        [pendingCount]="pendingCount"
+        [escalatedCount]="escalatedCount"
       >
       </rolemgmt-content>
     </div>
