--- a/src/app/assistance-listing/assistance-listing-operations/sections/overview/overview.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/overview/overview.template.html
@@ -8,6 +8,10 @@
                [required]="true"
                formControlName="objective"></samTextArea>
 
+  <falFYTable [options]="fundedProjectsConfig"
+              [formControlName]="'fundedProjects'"
+  ></falFYTable>
+
   <samTextArea [hint]="'Provide an introduction to the listing that tells the public in plain, clear language its purpose, who it serves, and what makes it unique.'"
                [control]="falOverviewForm.controls['falDesc']"
                [name]="'falDesc-input'"
