Hidding help topics links

--- a/src/app/Help/sections/overview/overview.template.html
+++ b/src/app/Help/sections/overview/overview.template.html
@@ -1,22 +1,11 @@
-<!--   Search -->
-<div class="sam-ui padded grid">
-  <div class="dark grey row">
-    <div class="sam-ui text container">
-      <div class="sam-ui center aligned very padded grid">
-        <div class="column">
-          Search Bar
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- Help Topics -->
 <div class="sam-ui container">
   <div class="sam-ui padded four column stackable grid">
     <div class="row" style="background: url(src/assets/img/help-main.png); background-size: cover;">
       <div class="column">
-        <div class="sam-ui segment">
+        <!-- Hidding until we have URL's for the links below -->
+        <div class="sam-ui segment" style="visibility: hidden;">
           <h3>Top Help Topics</h3>
           <div class="sam-ui list">
             <div class="item">
