--- a/src/app/assistance-listing/assistance-listing-operations/sections/applying-for-assistance/applying-for-assistance.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/applying-for-assistance/applying-for-assistance.template.html
@@ -14,7 +14,7 @@
 
       <assistInfoTable
         [hideAddButton]="hideAddButton"
-        [assistInfo]="assistInfo"
+        [assistInfo]="assistInfoDisp"
         (assistTableActionHandler)="assistActionHandler($event)"></assistInfoTable>
 
       <assistSubform #assistSubForm
