--- a/src/app/assistance-listing/components/applying-assistance-table/applying-assistance-table.template.html
+++ b/src/app/assistance-listing/components/applying-assistance-table/applying-assistance-table.template.html
@@ -6,7 +6,7 @@
   <tbody>
   <tr *ngFor="let assist of assistInfo; let i=index">
     <td>
-      {{assist | json}}
+      {{assist}}
     </td>
     <td>
       <ng-container *ngIf="!hideAddButton">
