Placeholder changed to Regional Agency Location

--- a/src/styles/pages/_search.scss
+++ b/src/styles/pages/_search.scss
@@ -63,6 +63,7 @@
       border-radius: 1rem;
       text-indent: 10px;
       padding-right: 28px;
+      font-size: initial;
     }
     .add-on {
       position: absolute;
