--- a/src/styles/pages/_grant-access.scss
+++ b/src/styles/pages/_grant-access.scss
@@ -30,4 +30,10 @@
     display: inline-block;
     max-width: 46rem;
   }
+
+  samTextArea {
+    label, textarea {
+      max-width: initial;
+    }
+  }
 }
