--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -5,7 +5,7 @@
   <div *ngIf="mode !== 'edit' && !userCameFromRoleWorkspace">
     <samSelect [disabled]="userCameFromRoleWorkspace" name="domain" label="Domain" [model]="domain" (modelChange)="onDomainChange($event)" [options]="domainOptions" required="true" [errorMessage]="errors.domain"></samSelect>
   </div>
-  <div *ngIf="mode === 'edit' || userCameFromRoleWorkspace">
+  <div *ngIf="mode === 'edit' && !userCameFromRoleWorkspace">
     <div class="usa-grid-full">
       <div>
         <label>Domain</label>
@@ -15,6 +15,9 @@
         <span *ngIf="!domain"><i>Loading Domain...</i></span>
       </div>
     </div>
+  </div>
+  <div *ngIf="userCameFromRoleWorkspace">
+    <request-details [requestObject]="request"></request-details>
   </div>
 
   <!-- Supervisor Name and email -->
