Assistance screen theming

--- a/src/styles/pages/_assistance-listing-operations.scss
+++ b/src/styles/pages/_assistance-listing-operations.scss
@@ -77,4 +77,13 @@
     margin-top: 0;
   }
 
+  .start-date {
+    width: 35%;
+    float: left;
+  }
+
+  .end-date {
+    width: 65%;
+    float: right;
+  }
 }
