--- a/src/app/assistance-listing/components/applying-assistance-subform/applying-assistance-subform.template.html
+++ b/src/app/assistance-listing/components/applying-assistance-subform/applying-assistance-subform.template.html
@@ -6,15 +6,19 @@
     <ng-container *ngFor="let assistGrp of falAssistSubForm.controls.deadlineList.controls; let i=index">
       <div [formGroupName]="i" [class.hide]="assistIndex !== i">
 
-        <samDate [name]="'start-date'"
-                 [label]="'Start Date'"
-                 formControlName="start"
-        ></samDate>
+        <div class="start-date">
+          <samDate [name]="'start-date'"
+                   [label]="'Start Date'"
+                   formControlName="start"
+          ></samDate>
+        </div>
 
-        <samDate [name]="'end-date'"
-                 [label]="'End Date'"
-                 formControlName="end"
-        ></samDate>
+        <div class="end-date">
+          <samDate [name]="'end-date'"
+                   [label]="'End Date'"
+                   formControlName="end"
+          ></samDate>
+          </div>
 
         <samTextArea [name]="'list-desc'"
                      [label]="'Deadline'"
